fix(see-also): visibility of image header (#164)

--- a/client/src/components/preview/ArticlePage.scss
+++ b/client/src/components/preview/ArticlePage.scss
@@ -351,7 +351,7 @@
       transition: all 0.2s ease;
     }
 
-    .img {
+    .imgSeeAlso {
       background-color: white;
       background-position: center;
       background-repeat: no-repeat;
